[package]
name = "rustburn"
version = "0.1.0"
authors = ["Paul Dejean <paulcdejean@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
neon = "0.10.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.neon]
features = ["napi-latest"]
